update dependencies .