@@ -21,14 +21,14 @@ import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.Field;
-import java.lang.reflect.Modifier;
 import java.util.Collections;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.function.BiFunction;
+import java.util.function.BiPredicate;
 import java.util.function.Function;
+import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -36,9 +36,11 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 
+import jp.furplag.function.Suppressor;
 import jp.furplag.function.Trebuchet;
-import jp.furplag.function.Trebuchet.ThrowableBiFunction;
-import jp.furplag.function.Trebuchet.ThrowableOperator;
+import jp.furplag.function.suppress.SuppressConsumer;
+import jp.furplag.function.suppress.SuppressFunction;
+import jp.furplag.function.suppress.SuppressPredicate;
 import jp.furplag.sandbox.reflect.Reflections;
 
 /**
@@ -47,20 +49,29 @@ import jp.furplag.sandbox.reflect.Reflections;
  * @author furplag
  */
 public final class TheUnsafe {
+  /** lazy initialization for {@link TheUnsafe#theUnsafe theUnsafe}. */
+  private static final class Origin {
+    private static final TheUnsafe theUnsafe = new TheUnsafe();
+  }
+
+  /** prefix of handler . */
+  private static enum Prefix /* @formatter:off */ { get, put }/* @formatter:on */
+
   /** {@link AccessibleObject#trySetAccessible()} implicitly . */
-  private static final ThrowableOperator<Field> conciliation = (field) -> Stream.ofNullable(field).peek(AccessibleObject::trySetAccessible).findAny().orElse(null);
+  private static final UnaryOperator<Field> conciliation = (field) -> Stream.ofNullable(field).peek(AccessibleObject::trySetAccessible).findAny().orElse(null);
   /** prettifying method name . */
   private static final BiFunction<Class<?>, Prefix, String> methodName = (type, prefix) -> String.join("", Objects.toString(prefix, ""), StringUtils.capitalize(Objects.toString(type, "").replaceAll("^.*\\.", "").toLowerCase(Locale.ROOT)));
+
   /** {@link MethodType} for getter . */
   private static final Function<Class<?>, MethodType> getMethodType = (type) -> MethodType.methodType(type, Object.class, long.class);
   /** {@link MethodType} for setter . */
   private static final Function<Class<?>, MethodType> putMethodType = (type) -> MethodType.methodType(void.class, Object.class, long.class, type);
+  /** failsafe for fieldOffset . */
+  private static final long invalidOffset;
 
-  /** prefix of handler . */
-  private static enum Prefix {
-    get, put
+  static {
+    invalidOffset = -1L;
   }
-
   /** {@link sun.misc.Unsafe#getUnsafe()}. */
   private final Object theUnsafe;
   /** {@link sun.misc.Unsafe#getObject(Object, long)}. */
@@ -71,6 +82,7 @@ public final class TheUnsafe {
   private final MethodHandle staticFieldBase;
   /** {@link sun.misc.Unsafe#staticFieldOffset(Field)}. */
   private final MethodHandle staticFieldOffset;
+
   /** {@link sun.misc.Unsafe#objectFieldOffset(Field)}. */
   private final MethodHandle objectFieldOffset;
 
@@ -78,19 +90,19 @@ public final class TheUnsafe {
    * {@link jp.furplag.reflect.unsafe.TheUnsafe} .
    */
   private TheUnsafe() {
-    final Class<?> sunMiscUnsafe = Trebuchet.orElse((Class<?> x) -> Class.forName("sun.misc.Unsafe"), (ex, x) -> null).apply(null);
-    theUnsafe = Trebuchet.orElse((Class<?> x) -> conciliation.apply(x.getDeclaredField("theUnsafe")).get(null), (ex, x) -> null).apply(sunMiscUnsafe);
-    final ThrowableBiFunction<String, MethodType, MethodHandle> finder = (name, methodType) -> MethodHandles.privateLookupIn(sunMiscUnsafe, MethodHandles.lookup()).findVirtual(sunMiscUnsafe, name, methodType);
-    final BiFunction<Class<?>, Prefix, Pair<Class<?>, MethodHandle>> pair = (x, y) -> ImmutablePair.of(x, Trebuchet.orElse(finder, (ex, e) -> null).apply(methodName.apply(x, y), (Prefix.get.equals(y) ? getMethodType : putMethodType).apply(x)));
+    final Class<?> unsafeClass = SuppressFunction.orNull("sun.misc.Unsafe", (Trebuchet.ThrowableFunction<String, Class<?>>) ((x) -> Class.forName(x)));
+    theUnsafe = SuppressFunction.orNull(unsafeClass, (Trebuchet.ThrowableFunction<Class<?>, Object>) ((x) -> conciliation.apply(x.getDeclaredField("theUnsafe")).get(null)));
+    final Trebuchet.ThrowableBiFunction<String, MethodType, MethodHandle> finder = (name, methodType) -> MethodHandles.privateLookupIn(unsafeClass, MethodHandles.lookup()).findVirtual(unsafeClass, name, methodType);
+    final Trebuchet.ThrowableBiFunction<Class<?>, Prefix, Pair<Class<?>, MethodHandle>> pair = (x, y) -> ImmutablePair.of(x, SuppressFunction.orNull(methodName.apply(x, y), (Prefix.get.equals(y) ? getMethodType : putMethodType).apply(x), finder));
 
-    staticFieldBase = Trebuchet.orElse(finder, (ex, x) -> null).apply("staticFieldBase", MethodType.methodType(Object.class, Field.class));
-    staticFieldOffset = Trebuchet.orElse(finder, (ex, x) -> null).apply("staticFieldOffset", MethodType.methodType(long.class, Field.class));
-    objectFieldOffset = Trebuchet.orElse(finder, (ex, x) -> null).apply("objectFieldOffset", MethodType.methodType(long.class, Field.class));
+    staticFieldBase = SuppressFunction.orNull("staticFieldBase", MethodType.methodType(Object.class, Field.class), finder);
+    staticFieldOffset = SuppressFunction.orNull("staticFieldOffset", MethodType.methodType(long.class, Field.class), finder);
+    objectFieldOffset = SuppressFunction.orNull("objectFieldOffset", MethodType.methodType(long.class, Field.class), finder);
     // @formatter:off
     gettings = Collections.unmodifiableMap(
       Stream.of(boolean.class, byte.class, char.class, double.class, float.class, int.class, long.class, short.class, Object.class)
         .map((x) -> pair.apply(x, Prefix.get))
-        .filter(x -> Objects.nonNull(x.getValue()))
+        .filter((x) -> Objects.nonNull(x.getValue()))
         .collect(Collectors.toMap(Pair::getKey, Pair::getValue, (first, next) -> first))
     );
     settings = Collections.unmodifiableMap(
@@ -111,7 +123,7 @@ public final class TheUnsafe {
    * @throws ReflectiveOperationException an access error
    */
   private Object fieldBase(Object mysterio, Field field) {
-    return Trebuchet.orElse((Field x) -> Modifier.isStatic(field.getModifiers()) ? staticFieldBase.invoke(theUnsafe, field) : mysterio, (t, x) -> null).apply(field);
+    return SuppressFunction.orNull(mysterio, field, (Trebuchet.ThrowableBiFunction<Object, Field, Object>) ((o, f) -> Reflections.isStatic.test(f) ? staticFieldBase.invoke(theUnsafe, f) : o));
   }
 
   /**
@@ -121,9 +133,7 @@ public final class TheUnsafe {
    * @return offset of the field, or returns {@link invalidOffset} if the field is null
    */
   private long fieldOffset(Field field) {
-    return (long) Optional.ofNullable(
-    Trebuchet.orElse((Field x) -> (Modifier.isStatic(x.getModifiers()) ? staticFieldOffset : objectFieldOffset).invoke(theUnsafe, x), (t, x) -> null).apply(field)
-    ).orElse(Long.valueOf(-1L));
+    return (long) Suppressor.orElse(field, (Trebuchet.ThrowableFunction<Field, Object>) ((f) -> (Reflections.isStatic.test(f) ? staticFieldOffset : objectFieldOffset).invoke(theUnsafe, f)), invalidOffset);
   }
 
   /**
@@ -133,9 +143,11 @@ public final class TheUnsafe {
    * @param field {@link Field}
    * @return the value of the field of classOrInstance
    */
-  public Object get(Object mysterio, Field field) {
-    return !readable(mysterio, field) ? null :
-      Trebuchet.orElse((Field x) -> gettings.getOrDefault(field.getType(), gettings.get(Object.class)).invoke(theUnsafe, fieldBase(mysterio, field), fieldOffset(field)), (t, x) -> null).apply(field);
+  private Object getInternal(Object mysterio, Field field) {
+    // @formatter:off
+    return !(Reflections.isAssignable(mysterio, field) && (Reflections.isStatic.test(field) || !(mysterio instanceof Class))) ? null :
+      SuppressFunction.orNull(mysterio, field, (Trebuchet.ThrowableBiFunction<Object, Field, Object>) ((o, f) -> gettings.getOrDefault(f.getType(), gettings.get(Object.class)).invoke(theUnsafe, fieldBase(o, f), fieldOffset(f))));
+    // @formatter:on
   }
 
   /**
@@ -145,10 +157,8 @@ public final class TheUnsafe {
    * @param field the field to update
    * @param value the value for update
    */
-  public void set(Object mysterio, Field field, Object value) {
-    if (Reflections.isAssignable(mysterio, field, value)) {
-      Trebuchet.orElse((Field x) -> settings.getOrDefault(field.getType(), settings.get(Object.class)).invoke(theUnsafe, fieldBase(mysterio, field), fieldOffset(field), primivatior(field.getType(), value)), (t, x) -> {t.printStackTrace(); return null;}).apply(field);
-    }
+  private void setInternal(Object mysterio, Field field, Object value) {
+    SuppressConsumer.acceptWith(mysterio, field, (Trebuchet.ThrowableBiConsumer<Object, Field>) ((o, f) -> settings.getOrDefault(f.getType(), settings.get(Object.class)).invoke(theUnsafe, fieldBase(o, f), fieldOffset(f), primivatior(f.getType(), value))));
   }
 
   /**
@@ -157,18 +167,13 @@ public final class TheUnsafe {
    * @param fieldType type of the filed
    * @param value the value
    * @return transformed object
-   * @throws Throwable an access error
    */
-  private static Object primivatior(final Class<?> fieldType, final Object value) throws Throwable {
+  private static Object primivatior(final Class<?> fieldType, final Object value) {
     // @formatter:off
     return String.class.equals(fieldType) ? Objects.toString(value, null) :
       !fieldType.isPrimitive() ? value :
-      MethodHandles.lookup().findVirtual(Reflections.getClass(value), methodName.apply(fieldType, null).toLowerCase(Locale.ROOT) + "Value", MethodType.methodType(fieldType)).invoke(value);
+      SuppressFunction.orNull(fieldType, value, (Trebuchet.ThrowableBiFunction<Class<?>, Object, Object>) ((t, v) -> MethodHandles.lookup().findVirtual(Reflections.getClass(v), methodName.apply(t, null).toLowerCase(Locale.ROOT) + "Value", MethodType.methodType(t)).invoke(v)));
     // @formatter:on
-  }
-
-  private static boolean readable(final Object mysterio, final Field field) {
-    return Reflections.isAssignable(mysterio, field) && (Modifier.isStatic(field.getModifiers()) || !(mysterio instanceof Class));
   }
 
   /**
@@ -176,12 +181,36 @@ public final class TheUnsafe {
    *
    * @return {@link TheUnsafe}
    */
-  public static final TheUnsafe getInstance() {
+  static TheUnsafe theUnsafe() {
     return Origin.theUnsafe;
+  };
+
+  /**
+   * read value using under unsafe access.
+   *
+   * @param mysterio {@link Class} or the instance .
+   * @param field {@link Field}
+   * @return the value of the field
+   */
+  public static Object get(final Object mysterio, final Field field) {
+    return theUnsafe().getInternal(mysterio, field);
   }
 
-  /** lazy initialization for {@link TheUnsafe#theUnsafe theUnsafe}. */
-  private static final class Origin {
-    private static final TheUnsafe theUnsafe = new TheUnsafe();
-  };
+  /**
+   * update value using under unsafe access.
+   *
+   * @param mysterio {@link Class} or the instance .
+   * @param field the field to update
+   * @param value the value for update
+   * @return true if update successful
+   */
+  public static boolean set(final Object mysterio, final Field field, final Object value) {
+    // @formatter:off
+    return
+      SuppressPredicate.isCorrect(mysterio, field, (BiPredicate<Object, Field>) ((o, f) ->
+        Reflections.isAssignable(o, f, value) &&
+        SuppressPredicate.isCorrect(value, (Trebuchet.ThrowablePredicate<Object>) ((v) -> {theUnsafe().setInternal(o,f, v); return Objects.equals(primivatior(f.getType(), v), get(o, f));}))
+      ));
+    // @formatter:on
+  }
 }
